Update scripts and figure generation

--- a/code/figures/figure4/compute_tsv2_hw_stats.ipynb
+++ b/code/figures/figure4/compute_tsv2_hw_stats.ipynb
@@ -186,6 +186,143 @@
     "diag_df.to_csv(out_diag_csv, index=False)\n",
     "print(\"Wrote diagonal loadings to:\", out_diag_csv)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d0b94eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing NMF, Blood\n",
+      "Processing NMF, Bone_Marrow\n",
+      "Processing NMF, Lung\n",
+      "Processing NMF, Mammary\n",
+      "Processing NMF, Thymus\n",
+      "Processing AE, Blood\n",
+      "Processing AE, Bone_Marrow\n",
+      "Processing AE, Lung\n",
+      "Processing AE, Mammary\n",
+      "Processing AE, Thymus\n",
+      "  model tissue matrix   cos_sim\n",
+      "0   NMF  Blood      H  0.579747\n",
+      "1   NMF  Blood      H  0.000091\n",
+      "2   NMF  Blood      H  0.003424\n",
+      "3   NMF  Blood      H  0.012220\n",
+      "4   NMF  Blood      H  0.017131\n",
+      "Total rows: 63200\n",
+      "Wrote: /mnt/projects/debruinz_project/bisholea/capstone/tsv2_benchmarks/tsv2_k80_nmf_nnae_between_factor_cosine.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ==========================================================\n",
+    "# Figure 4B: Between-factor cosine similarity (W^T W, H^T H)\n",
+    "# ==========================================================\n",
+    "\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scanpy as sc\n",
+    "\n",
+    "# ------------------------\n",
+    "# Config (same as above)\n",
+    "# ------------------------\n",
+    "\n",
+    "base_dir = \"/mnt/projects/debruinz_project\"\n",
+    "\n",
+    "out_between_csv = (\n",
+    "    \"/mnt/projects/debruinz_project/bisholea/capstone/\"\n",
+    "    \"tsv2_benchmarks/tsv2_k80_nmf_nnae_between_factor_cosine.csv\"\n",
+    ")\n",
+    "\n",
+    "tissues = [\"Blood\", \"Bone_Marrow\", \"Lung\", \"Mammary\", \"Thymus\"]\n",
+    "\n",
+    "models = [\n",
+    "    (\"NMF\", \"Base NMF\",\n",
+    "     \"sklearn_nmf_k80_baseNMF_{tissue}.h5ad\",\n",
+    "     \"H_sklearn_nmf_k80\", \"W_sklearn_nmf_k80\"),\n",
+    "    (\"AE\",  \"AE NMF\",\n",
+    "     \"tied_nmf_k80_no_cond_{tissue}.h5ad\",\n",
+    "     \"H_shared\", \"W_tied\"),\n",
+    "]\n",
+    "\n",
+    "# ------------------------\n",
+    "# Helpers\n",
+    "# ------------------------\n",
+    "\n",
+    "def offdiag_cosine_cols(A):\n",
+    "    \"\"\"\n",
+    "    A: (n x k), factors are columns.\n",
+    "    Returns off-diagonal cosine similarities from A_norm^T A_norm.\n",
+    "    \"\"\"\n",
+    "    A = np.asarray(A)\n",
+    "    denom = np.linalg.norm(A, axis=0)\n",
+    "    denom[denom == 0] = np.nan\n",
+    "    An = A / denom\n",
+    "    G = An.T @ An\n",
+    "    iu = np.triu_indices(G.shape[0], k=1)\n",
+    "    v = G[iu]\n",
+    "    return v[np.isfinite(v)]\n",
+    "\n",
+    "# ------------------------\n",
+    "# Compute similarities\n",
+    "# ------------------------\n",
+    "\n",
+    "rows = []\n",
+    "\n",
+    "for model_code, folder, pattern, h_key, w_key in models:\n",
+    "    for tissue in tissues:\n",
+    "        h5ad_path = os.path.join(base_dir, folder, pattern.format(tissue=tissue))\n",
+    "        if not os.path.exists(h5ad_path):\n",
+    "            print(f\"[WARN] Missing file: {h5ad_path}\")\n",
+    "            continue\n",
+    "\n",
+    "        print(f\"Processing {model_code}, {tissue}\")\n",
+    "        adata = sc.read_h5ad(h5ad_path)\n",
+    "\n",
+    "        H = np.asarray(adata.obsm[h_key])   # cells x k\n",
+    "        W = np.asarray(adata.varm[w_key])   # genes x k\n",
+    "\n",
+    "        # sanity check\n",
+    "        if H.shape[1] != W.shape[1]:\n",
+    "            raise ValueError(f\"k mismatch in {h5ad_path}\")\n",
+    "\n",
+    "        # H^T H (factor-factor)\n",
+    "        vH = offdiag_cosine_cols(H)\n",
+    "        for x in vH:\n",
+    "            rows.append({\n",
+    "                \"model\": model_code,\n",
+    "                \"tissue\": tissue,\n",
+    "                \"matrix\": \"H\",\n",
+    "                \"cos_sim\": float(x),\n",
+    "            })\n",
+    "\n",
+    "        # W^T W (factor-factor)\n",
+    "        vW = offdiag_cosine_cols(W)\n",
+    "        for x in vW:\n",
+    "            rows.append({\n",
+    "                \"model\": model_code,\n",
+    "                \"tissue\": tissue,\n",
+    "                \"matrix\": \"W\",\n",
+    "                \"cos_sim\": float(x),\n",
+    "            })\n",
+    "\n",
+    "# ------------------------\n",
+    "# Save\n",
+    "# ------------------------\n",
+    "\n",
+    "between_df = pd.DataFrame(rows)\n",
+    "print(between_df.head())\n",
+    "print(\"Total rows:\", len(between_df))\n",
+    "\n",
+    "os.makedirs(os.path.dirname(out_between_csv), exist_ok=True)\n",
+    "between_df.to_csv(out_between_csv, index=False)\n",
+    "print(\"Wrote:\", out_between_csv)"
+   ]
   }
  ],
  "metadata": {
@@ -204,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
